# engineering_thesis

./: Arduino_ANFIS.ino  CMakeLists.txt  README.md  main.cpp
ANFISlib/: CMakeLists.txt
ANFISlib/include/: CMakeLists.txt  anfisClassfier.hpp  defuzzificationMethods.hpp  membershipFunctions.hpp  norms.hpp
ANFISlib/source/: CMakeLists.txt  anfisClassfier.cpp  defuzzificationMethods.cpp
include/: CMakeLists.txt  anfisClassfier.hpp  config.hpp  defuzzificationMethods.hpp
source/: CMakeLists.txt  anfisClassfier.cpp  membershipFunctions.cpp  norms.cpp
